# filkoll

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  about.hbs  about.toml  deny.toml  release-plz.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  support_request.md
.github/workflows/: act_build.yml  act_build_release.yml  act_lint.yml  ci-dev.yml  release-plz-pr.yml  release-plz-release.yml  release.yml
crates/filkoll/: Cargo.toml  build.rs
crates/filkoll/src/: arch.rs  cli.rs  interner.rs  lib.rs  lookup.rs  main.rs  types.rs  update.rs
crates/filkoll/src/arch/: pacman_conf.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: cli.rs  main.rs
etc/shell/: command-not-found.bash  command-not-found.fish  command-not-found.zsh
etc/systemd/: README.md  filkoll-update.service.in  filkoll-update.timer
integration_tests/: run_tests.sh
integration_tests/arch/basic_config/: test.sh
integration_tests/arch/basic_config/expected/: 2_output.txt
integration_tests/images/arch/: Containerfile  build_image.sh  test_runner.sh
shell/: README.md
